<?xml version="1.0"?>
<package>
  <name>door_handle_detection</name>
  <version>0.0.1</version>
  <description>Door handle detection</description>

  <maintainer email="benoit.heintz@irisa.fr">bheintz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>libpcl-all</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visp_bridge</run_depend>
  <run_depend>image_transport</run_depend>

  <export>

  </export>
</package>
